# dr-stone

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CRAWLING.md  Dockerfile  Dockerfile.worker  LEONARDO-SKILL.md  PLAN.md  README.md  SKILLS.md  TASKS.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  wrangler.jsonc
.claude/skills/: infographic-creator
.github/workflows/: deploy.yml
docker/: test.Dockerfile
docs/: API_SPEC.md  api.md
docs/sources/: amazon.md  implementation-guide.md  kabum.md  mercadolivre-investigation.md  mercadolivre.md  pichau.md
dr-stone-api/: Dockerfile  package.json  tsconfig.json  tsconfig.tsbuildinfo
dr-stone-api/scripts/: copy-openapi.mjs
dr-stone-api/src/: app.ts  env.ts  index.ts  openapi.json
dr-stone-api/src/services/: runtime.ts
dr-stone-database/: package.json  tsconfig.tsbuildinfo
dr-stone-database/migrations/: 0001_initial_schema.sql  0003_price_history_indexes.sql
dr-stone-database/src/: index.ts  migrate.ts  schema.ts  sources.ts  types.ts  utils.ts
dr-stone-scrapper/: Dockerfile  package.json  tsconfig.json  tsconfig.tsbuildinfo
dr-stone-scrapper/src/: env.ts  errors.ts  failures.ts  html.ts  index.ts  logger.ts  normalizers.ts  runtime.ts  types.ts  worker.ts
fixtures/: kabum_product_page.html
migrations/: 0002_tracked_product_search_terms.sql
scripts/: scrape_product.py
src/: entry.py
src/dr_stone/: __init__.py  api.py  cli.py  config.py  dashboard.py  exceptions.py  failures.py  http.py  logging.py  matching.py  models.py  normalizers.py  parsing.py  runtime.py  search_cli.py  search_terms.py  storage.py  worker.py
tests/: amazon-job-scheduler.test.ts  api.test.ts  collection-job-scheduler.test.ts  conftest.py  mercadolivre-source.test.ts  pichau-source.test.ts  runtime.test.ts  test_api.py  test_failures.py  test_http_fetcher.py  test_kabum_scraper.py  test_kabum_search_scraper.py  test_matching.py  test_normalizers.py  test_runtime.py  test_search_collection.py  test_storage.py  test_worker.py  test_worker_dashboard.py  worker.test.ts
tests/helpers/: postgres.ts
tools/amazon-inspector/: README.md  inspect.amazon.spec.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+25 files in other folders)
