[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-stone"
version = "0.1.0"
description = "Price scraping foundation for the Dr. Stone project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "httpx>=0.28,<0.29",
  "wsgicors>=0.7,<0.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6.0,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6.0,<7",
  "workers-py",
  "workers-runtime-sdk",
]

[project.scripts]
dr-stone-search = "dr_stone.search_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
